添加三方库

--- a/src/process/CMakeLists.txt
+++ b/src/process/CMakeLists.txt
@@ -13,3 +13,8 @@ ${PNC_Map_Dir}
 target_link_libraries(${PROJECT_NAME}
 PUBLIC
 pnc_map)
+
+target_link_libraries(${PROJECT_NAME}
+PUBLIC
+Eigen3::Eigen
+)
