--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,17 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 set(Process_Dir ${CMAKE_SOURCE_DIR}/src/process)
 set(PNC_Map_Dir ${CMAKE_SOURCE_DIR}/src/pnc_map)
 
+
+#三方库
+set(EIGEN3_INCLUDE_DIR "/usr/local/include/eigen-3.4.0")
+list(APPEND CMAKE_MODULE_PATH "${EIGEN3_INCLUDE_DIR}/cmake")
+message("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
+
+find_package(Eigen3 3.4 REQUIRED)
+
+if(TARGET Eigen3::Eigen)
+message(STATUS "****** Eigen3 3.4.0 found in ${EIGEN3_INCLUDE_DIR} ******")
+endif()
 #添加子目录
 add_subdirectory(src)
+
